--- a/script/SZDM N=6.ipynb
+++ b/script/SZDM N=6.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
     "import numpy as np\n",
     "\n",
-    "from basis_generator import generate_basis, sel_seq"
+    "from basis_generator import basis_gs, sel_seq"
    ]
   },
   {
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dim = 2\n",
+    "dimX = 3\n",
+    "dim_base = 2\n",
     "num_obs = 6\n",
     "len_seq = 3\n",
-    "out_max = 1\n",
-    "basis_size= 500\n",
-    "seq_method=\"sel_sequences\"\n",
+    "num_out = 2\n",
+    "remove_last_out = False\n",
     "\n",
     "SZDM6_events = [((1, 0, 0), (0, 2, 3)),\n",
     "            ((1, 0, 0), (1, 3, 5)),\n",
@@ -40,37 +40,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1728, 1728)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_basis = basis_gs(dim = dim_base,\n",
+    "            num_obs = num_obs,\n",
+    "            len_seq = len_seq,\n",
+    "            num_out = num_out,\n",
+    "            level = 1,\n",
+    "            remove_last_out = remove_last_out,\n",
+    "            stop = 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences = sel_seq(num_obs = num_obs,\n",
+    "                len_seq = len_seq,\n",
+    "                num_out = num_out,\n",
+    "                remove_last_out = False)\n",
+    "\n",
+    "C = np.zeros(X_basis[0].shape)\n",
+    "for i, seq_row in enumerate(sequences):\n",
+    "    if seq_row in SZDM6_events:\n",
+    "        C[i,i] = 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Optimization with the First Level of the Hierarchy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "X_basis, rank = generate_basis(dim = dim,\n",
-    "                num_obs = num_obs,\n",
-    "                len_seq = len_seq,\n",
-    "                out_max = out_max,\n",
-    "                batch_size = basis_size,\n",
-    "                seq_method= seq_method,\n",
-    "                sel_sequences = [len_seq],\n",
-    "                remove_last_out = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rank"
    ]
   },
   {
@@ -97,18 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences = sel_seq(num_obs = num_obs,\n",
-    "                len_seq = len_seq,\n",
-    "                out_max = out_max,\n",
-    "                remove_last_out = False)\n",
-    "\n",
-    "C = np.zeros(X_basis[0].shape)\n",
-    "for i, seq_row in enumerate(sequences):\n",
-    "    if seq_row in GYN_events:\n",
-    "        C[i,i] = 1\n",
-    "        \n",
-    "prob = cp.Problem(cp.Maximize(cp.trace(C@X)),\n",
-    "                  constraints)"
+    "prob = cp.Problem(cp.Maximize(cp.trace(C@X)), constraints)"
    ]
   },
   {
@@ -119,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "prob.solve(solver=cp.MOSEK, verbose=False)\n",
+    "prob.solve(solver=cp.MOSEK, verbose=True)\n",
     "\n",
     "print(prob.status)\n",
     "print(\"The optimal value is\", prob.value)"
